--- a/app/Resources/en.lproj/PlotDeviceScript.xib
+++ b/app/Resources/en.lproj/PlotDeviceScript.xib
@@ -67,14 +67,14 @@
             </connections>
             <point key="canvasLocation" x="-247" y="-21"/>
         </window>
-        <window title="Variables" allowsToolTipsWhenApplicationIsInactive="NO" hidesOnDeactivate="YES" releasedWhenClosed="NO" visibleAtLaunch="NO" appearanceType="darkAqua" animationBehavior="default" titlebarAppearsTransparent="YES" id="169" userLabel="Panel" customClass="NSPanel">
+        <window title="Variables" allowsToolTipsWhenApplicationIsInactive="NO" hidesOnDeactivate="YES" releasedWhenClosed="NO" visibleAtLaunch="NO" animationBehavior="default" titlebarAppearsTransparent="YES" id="169" userLabel="Panel" customClass="NSPanel">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" resizable="YES" utility="YES" nonactivatingPanel="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="395" y="467" width="300" height="97"/>
             <rect key="screenRect" x="0.0" y="0.0" width="2560" height="1415"/>
             <value key="minSize" type="size" width="300" height="11"/>
             <value key="maxSize" type="size" width="2000" height="97"/>
-            <view key="contentView" appearanceType="darkAqua" id="168" customClass="NSVisualEffectView">
+            <view key="contentView" id="168" customClass="NSVisualEffectView">
                 <rect key="frame" x="0.0" y="0.0" width="300" height="97"/>
                 <autoresizingMask key="autoresizingMask"/>
             </view>
